--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
+import java.nio.file.Files
+import java.nio.file.Paths
+import java.util.stream.Collectors
 
 buildscript {
     rootProject.version = '0.19.0-SNAPSHOT'
@@ -18,8 +22,7 @@ buildscript {
         junitPlatformVersion = '1.9.1'
         jupiterVersion = '5.9.1'
         spekVersion = '2.0.12'
-        //TODO 0.19.0 check if we can already update to kotestVersion = '4.6.4'
-        kotestVersion = '4.3.2'
+        kotestVersion = '4.6.4'
         spekExtensionsVersion = '1.2.1'
         spekExtensions = { "ch.tutteli.spek:tutteli-spek-extensions:$spekExtensionsVersion" }
         mockkVersion = '1.10.0'
@@ -35,8 +38,7 @@ buildscript {
         // release
         gradle_nexus_publish_plugin_version = '1.1.0'
 
-        //TODO 0.19.0 add all modules and remove this afterwards
-        newMultiplatformProjectNames = [
+        multiplatformProjectNames = [
             "core",
             "logic", "logic-kotlin_1_3",
             "translations-en_GB", "translations-de_CH",
@@ -153,8 +155,8 @@ subprojects {
 
 
 
-def newMultiplatformProjects = newMultiplatformProjectNames.collect { prefixedProject(it) }
-configure(newMultiplatformProjects) { subproject ->
+def multiplatformProjects = multiplatformProjectNames.collect { prefixedProject(it) }
+configure(multiplatformProjects) { subproject ->
     apply plugin: "kotlin-multiplatform"
 
     kotlin {
@@ -247,14 +249,14 @@ configure(newMultiplatformProjects) { subproject ->
         }
     }
 
-    //TODO 0.19.0 update tutteli-gradle-plugins and remove as this is handled there
+    //TODO 0.20.0 update tutteli-gradle-plugins and remove as this is handled there
     // calling the Kotlin extension function in buildSrc
     ConfigureTestTasksKt.configureTestTasks(subproject)
 
     sourceCompatibility = 11
     targetCompatibility = 11
 
-    //TODO 0.19.0 update tutteli-gradle-plugins and remove as this is handled there and allows to use the normal java/ directory instead of module/
+    //TODO 0.20.0 update tutteli-gradle-plugins and remove as this is handled there and allows to use the normal java/ directory instead of module/
     def moduleInfoReplaceMe = {
         if (subproject.components.findByName('java') == null) throw new IllegalStateException("""\
             Could not find the java component.
@@ -300,12 +302,10 @@ tasks.withType(KotlinCompile).configureEach {
     }
 }
 
-//TODO 0.19.0 cleanup this file once we have transitioned all modules to the new MPP plugin
-
 configure(subprojects.findAll {
     def parentName = it.projectDir.parentFile.name
     it.name != "bc-tests" && parentName != "old" && parentName != "bc-tests"
-}  - newMultiplatformProjects) { subproject ->
+}  - multiplatformProjects) { subproject ->
     apply plugin: 'kotlin'
     dependencies {
         implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
@@ -345,8 +345,8 @@ configure(subprojects.findAll {
 //}
 
 
-//TODO 0.19.0 configure dokka plugins again also for newMultiplatformProjects
-configure(subprojects - toolProjects - newMultiplatformProjects) { Project subproject ->
+//TODO 0.19.0 configure dokka plugins again also for multiplatformProjects
+configure(subprojects - toolProjects - multiplatformProjects) { Project subproject ->
     apply plugin: 'ch.tutteli.dokka'
     apply plugin: 'ch.tutteli.kotlin.module.info'
 
@@ -391,8 +391,8 @@ configure(apiProjects) { apiProject ->
 
 def bundleSmokeTests = subprojects.findAll { it.name.contains('-smoke-test') }
 
-//TODO 0.19.0 newMultiPlatformProject have to be published differently, update to tutteli-gradle-plugins
-configure(subprojects - bundleSmokeTests - toolProjects - newMultiplatformProjects) { subproject ->
+//TODO 0.19.0 multiplatformProjects have to be published differently, update to tutteli-gradle-plugins
+configure(subprojects - bundleSmokeTests - toolProjects - multiplatformProjects) { subproject ->
     apply plugin: 'ch.tutteli.publish'
 
     tutteliPublish {
@@ -401,7 +401,7 @@ configure(subprojects - bundleSmokeTests - toolProjects - newMultiplatformProjec
 }
 
 //TODO 0.19.0 spek is used in another way, see above, but we have not yet applied the jacoco plugin
-configure(jacocoMulti.jacocoProjects + getAndroidProjects() - newMultiplatformProjects) {
+configure(jacocoMulti.jacocoProjects - multiplatformProjects) {
     apply plugin: 'ch.tutteli.spek'
     spek.version = spekVersion
 
@@ -438,8 +438,8 @@ configure(jacocoMulti.jacocoProjects + getAndroidProjects() - newMultiplatformPr
 }
 
 
-// this is already configured for newMultiplatformProjects further above, thus the substraction
-configure(subprojects - toolProjects - newMultiplatformProjects) {
+// this is already configured for multiplatformProjects further above, thus the substraction
+configure(subprojects - toolProjects - multiplatformProjects) {
     sourceSets.configureEach {
         languageSettings {
             useExperimentalAnnotation('kotlin.Experimental')
@@ -480,12 +480,6 @@ configure(bundleSmokeTests) {
         }
     }
 }
-
-
-import org.jetbrains.kotlin.gradle.dsl.KotlinCompile
-import java.nio.file.Files
-import java.nio.file.Paths
-import java.util.stream.Collectors
 
 def getSubprojectTasks(String name) {
     return subprojects.collect { it.tasks.findByName(name) }.findAll { it != null }
