update tutteli-gradle-plugins switch to build.gradle.kts also in root
updating tutteli-gradle-plugins also means that we can move the
module-info.java files into the java source folder

--- a/gradle/scripts/check-dexer.gradle
+++ b/gradle/scripts/check-dexer.gradle
@@ -26,7 +26,7 @@ configure(dexerProjects) { subproject ->
         mavenCentral()
     }
     dependencies {
-        r8 "com.android.tools:r8:$d8_version"
+        r8 "com.android.tools:r8:$d8Version"
         d8 subproject
     }
 
