--- a/misc/tools/atrium-samples-test/settings.gradle
+++ b/misc/tools/atrium-samples-test/settings.gradle
@@ -12,4 +12,4 @@ includeBuild('../../../') {
 }
 includeBuild '../../../samples/jvm/junit5'
 includeBuild '../../../samples/jvm/spek'
-includeBuild '../../../samples/multiplatform'
+includeBuild '../../../samples/multiplatform/kotlin-test'
