--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        java_version: [ 11, 14 ]
+        java_version: [ 11, 17 ]
 
     steps:
       - uses: actions/checkout@v3
@@ -19,6 +19,8 @@ jobs:
           java-version: ${{ matrix.java_version }}
 
       - name: build
+        env:
+          JAVA_VERSION: ${{ matrix.java_version }}
         run: ./gradlew build
 
       # TODO 1.3.0 re-activate scala API
