only use jdk 11 to run gradle but also use jdk17 in the toolchain

--- a/.github/workflows/check-generated-committed.yml
+++ b/.github/workflows/check-generated-committed.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 11
+          cache: 'gradle'
 
       - name: check generateLogic committed
         run: ./gradle/scripts/check-generateLogic-committed.sh
