--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: "Set up JDK ${{ matrix.java_version }}"
+      - name: "Set up JDK 11"
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
-          java-version: ${{ matrix.java_version }}
+          java-version: 11
+          cache: 'gradle'
 
-      - name: build
+      - name: "build using jdk ${{ matrix.java_version }}"
         env:
           JAVA_VERSION: ${{ matrix.java_version }}
         run: ./gradlew build
