--- a/.github/workflows/generate-readme-examples.yml
+++ b/.github/workflows/generate-readme-examples.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 11
+          cache: 'gradle'
       - name: Generate readme
         run: ./gradlew :readme-examples:build
       - name: Create Pull Request
