--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -72,6 +72,7 @@ jobs:
         run: ./gradlew build
         working-directory: misc\tools\atrium-samples-test
 
-      - name: composite build atrium-js-sample-test
-        run: ./gradlew build
-        working-directory: misc\tools\atrium-js-sample-test
+      # TODO 1.2.0 activate again once we use JS IR
+#      - name: composite build atrium-js-sample-test
+#        run: ./gradlew build
+#        working-directory: misc\tools\atrium-js-sample-test
