setup jdk17 again by using setup-java
We used jdk11 before because gradle 6.9.3 did not support jdk17

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
-          java-version: 11
+          java-version: ${{ matrix.java_version }}
           cache: 'gradle'
 
       - name: "build using jdk ${{ matrix.java_version }}"
