--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -4,6 +4,8 @@ on: [ push, pull_request ]
 
 jobs:
   build:
+    env:
+      android-version: 26
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -12,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: "Set up JDK 11"
+      - name: "Set up JDK ${{ matrix.java_version }}"
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
@@ -23,6 +25,31 @@ jobs:
         env:
           JAVA_VERSION: ${{ matrix.java_version }}
         run: ./gradlew build
+
+      - name: Cache android jar
+        id: android-cache
+        uses: actions/cache@v3
+        with:
+          path: android-jar-cache
+          key: ${{ runner.os }}-android-version-${{ env.android-version }}
+
+      - name: download Android SDK's android.jar (or use cached file)
+        if: steps.android-cache.outputs.cache-hit != 'true'
+        run: |
+          mkdir android-jar-cache
+          cd android-jar-cache
+          curl -o android.jar -L "https://github.com/Sable/android-platforms/blob/master/android-${{ env.android-version }}/android.jar?raw=true"
+          echo "cdc1846376a14b0370cc63454a129606b4a52cc50ada75ef0d4cf956b1ad2daa  android.jar" >android.sha256
+          if ! sha256sum -c android.sha256; then
+            echo >&2 "wrong sha256 for android.jar, expected:"
+            cat >&2 android.sha256
+            echo >&2 "actual:"
+            sha256sum android.jar
+            exit 1;
+          fi
+
+      - name: check Atrium's -jvm.jar can be dexed
+        run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
 
       # TODO 1.3.0 re-activate scala API
       #            -   name: composite build atrium-scala2
