--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -4,6 +4,8 @@ on: [ push, pull_request ]
 
 jobs:
   build:
+    env:
+      JAVA_VERSION: ${{ matrix.java_version }}
     runs-on: windows-latest
     strategy:
       fail-fast: true
@@ -12,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: "Set up JDK 11"
+      - name: "Set up JDK ${{ matrix.java_version }}"
         uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
@@ -20,8 +22,6 @@ jobs:
           cache: 'gradle'
 
       - name: "build using jdk ${{ matrix.java_version }}"
-        env:
-          JAVA_VERSION: ${{ matrix.java_version }}
         run: ./gradlew build
 
       # TODO 1.5.0 re-activate scala API
@@ -32,8 +32,6 @@ jobs:
       - name: Upload windows build code coverage
         uses: codecov/codecov-action@v3.1.4
         if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
-        env:
-          JAVA_VERSION: ${{ matrix.java_version }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: current_windows
