activate codecov again, didn0t report because we no longer run bc-tests

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -16,6 +16,7 @@ coverage:
 codecov:
   branch: main
   notify:
-    after_n_builds: 5
+    wait_for_ci: true
+
 comment:
-  after_n_builds: 5
+  after_n_builds: 2
