--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 kotlin.code.style=official
 
-kotlin.explicitApi=false
-
-kotlin.explicitApi=false
+# com.github.vlsi.gradle-extensions prints only failing or slow test results
+slowTestLogThreshold=500
+slowSuiteLogThreshold=5000
