--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,7 +22,7 @@ jobs:
           cache: 'gradle'
 
       - name: "build using jdk ${{ matrix.java_version }}"
-        run: ./gradlew build
+        run: ./gradlew build -x :atrium-core:jsNodeTest
 
       # TODO 1.5.0 re-activate scala API
       #            -   name: composite build atrium-scala2
