--- a/.github/workflows/samples-windows.yml
+++ b/.github/workflows/samples-windows.yml
@@ -52,3 +52,7 @@ jobs:
       - name: build maven sample
         run: ./mvnw -B clean verify
         working-directory: samples\jvm\maven
+
+      - name: build kotest sample
+        run: ./gradlew build
+        working-directory: samples\jvm\kotest
