Add jvm kotest sample

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,6 +32,14 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - "dependencies"
+  - package-ecosystem: maven
+    directory: "/samples/jvm/kotest"
+    schedule:
+      interval: daily
+      time: "04:00"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
   - package-ecosystem: gradle
     directory: "/samples/jvm/spek"
     schedule:
