--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,7 +32,7 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - "dependencies"
-  - package-ecosystem: maven
+  - package-ecosystem: gradle
     directory: "/samples/jvm/kotest"
     schedule:
       interval: daily
