use gradle-build-action instead of setup-java's cache

--- a/.github/workflows/check-generated-committed.yml
+++ b/.github/workflows/check-generated-committed.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 11
-          cache: 'gradle'
-
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.9.0
       - name: check generateLogic committed
         run: ./gradle/scripts/check-generateLogic-committed.sh
         shell: bash
