--- a/.github/workflows/generate-readme-examples.yml
+++ b/.github/workflows/generate-readme-examples.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: 11
-          cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.9.0
+
       - name: Generate readme
         run: ./gradlew :readme-examples:build
       - name: Create Pull Request
