--- a/.github/workflows/samples-windows.yml
+++ b/.github/workflows/samples-windows.yml
@@ -23,7 +23,9 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: ${{ matrix.java_version }}
-          cache: 'gradle'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.9.0
 
       - name: Cache maven dependencies
         uses: actions/cache@v3
