Add jvm testNG sample

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -41,6 +41,14 @@ updates:
     labels:
       - "dependencies"
   - package-ecosystem: gradle
+    directory: "/samples/jvm/testng"
+    schedule:
+      interval: daily
+      time: "04:00"
+    open-pull-requests-limit: 10
+    labels:
+      - "dependencies"
+  - package-ecosystem: gradle
     directory: "/samples/jvm/spek"
     schedule:
       interval: daily
