--- a/gradle/scripts/check-dexer.gradle
+++ b/gradle/scripts/check-dexer.gradle
@@ -13,10 +13,10 @@ def prefixedProject(String name) {
 
 
 def dexerProjects = ["core",
-                     "logic", "logic-kotlin_1_3",
+                     "logic",
                      "translations-en_GB", "translations-de_CH",
-                     "api-fluent", "api-fluent-kotlin_1_3",
-                     "api-infix", "api-infix-kotlin_1_3",
+                     "api-fluent",
+                     "api-infix",
                      "fluent",
                      "infix",
                      "verbs",
