--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,7 @@
         "config:base",
         "github>robstoll/renovate-presets-jvm",
         ":switchToGradleLite"
-    ]
+    ],
+    # TODO 3.0 activate again once we support scala
+    "ignorePaths": ["atrium-scala2/"]
 }
