--- a/renovate.json
+++ b/renovate.json
@@ -5,8 +5,11 @@
         ":switchToGradleLite"
     ],
     "packageRules": [
-        "matchFileNames": ["samples/**"],
-        "schedule": ["every month"]
+        {
+            "matchFileNames": ["samples/**"],
+            "schedule": ["every month"],
+            "additionalBranchPrefix": "samples"
+        }
     ],
     "description": "TODO 3.0 activate again once we support scala",
     "ignorePaths": ["atrium-scala2/"]
