--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,5 +12,6 @@
         }
     ],
     "description": "TODO 3.0 activate again once we support scala",
-    "ignorePaths": ["atrium-scala2/"]
+    "ignorePaths": ["atrium-scala2/"],
+    "ignoreDeps": ["spek", "mockk"]
 }
