--- a/gradle/buildLibs.versions.toml
+++ b/gradle/buildLibs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 dokka = "1.9.10"
 jacocoTool = "0.8.9"
-kotlin = "1.9.10"
+kotlin = "2.0.0-Beta3"
 task-tree = "2.1.1"
 tutteli = "5.0.1"
 vlsi = "1.90"
