--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -85,10 +85,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kotlin_version: [ '1.5', '1.6', '1.7', '1.8', '1.9' ]
+        kotlin_version: [ '1.5', '1.6', '1.7', '1.8', '1.9', '2.0' ]
     steps:
       - uses: actions/checkout@v4
-      - name: "Set up JDK ${{ matrix.java_version }}"
+      - name: "Set up JDK 17"
         uses: actions/setup-java@v4
         with:
           distribution: 'adopt'
