--- a/.github/workflows/quality-assurance.yml
+++ b/.github/workflows/quality-assurance.yml
@@ -1,6 +1,6 @@
-name: CI
+name: Quality Assurance
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   generate-matrix:
@@ -10,11 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          fetch-depth: 1
 
       - name: Generate matrix
         id: set-matrix
@@ -28,21 +25,23 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Set up JDK ${{ matrix.java_version }}
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
+          distribution: ${{ matrix.java_distribution }}
           java-version: ${{ matrix.java_version }}
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3.3.2
+        uses: gradle/gradle-build-action@v3.4.1
 
       - name: Build using JDK ${{ matrix.java_version }}
         run: ./gradlew build
 
       - name: Upload build code coverage
-        uses: codecov/codecov-action@v4.4.1
+        uses: codecov/codecov-action@v4.5.0
         if: ${{ github.event_name == 'pull_request' || (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -58,6 +57,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
       - name: Cache Android jar
         id: android-cache
@@ -85,7 +86,7 @@ jobs:
         run: ATRIUM_ANDROID_JAR="$PWD/android-jar-cache/android.jar" ./gradlew checkDexer
 
   forwardCompatibility:
-    needs: dexer
+    needs: []  #Not sure if it should be left empty or if it should contain generate-matrix
     env:
       JAVA_VERSION: 17
       KOTLIN_VERSION: ${{ matrix.kotlin_version }}
@@ -93,17 +94,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kotlin_version: ['1.5', '1.6', '1.7', '1.8', '1.9', '2.0']
+        kotlin_version: [ '1.5', '1.6', '1.7', '1.8', '1.9', '2.0' ]
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: 17
+          distribution: ${{ matrix.java_distribution }}
+          java-version: ${{ matrix.java_version }}
 
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3.3.2
+        uses: gradle/gradle-build-action@v3.4.1
 
       - name: Build using Kotlin ${{ matrix.kotlin_version }}
         run: ./gradlew build
