first draft generating code but with errors
known errors:
- does not take type parameters into account which are defined next to
  SubjectT in the kotlin expectation function
- inlining xyz(..).transform() calls does not always work
  because body of IrFunction is empty

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ slowSuiteLogThreshold=5000
 
 # the project requires at least the following memory to not run into OOM in github actions
 org.gradle.jvmargs=-Xmx1g
+
+# TODO 1.3.0 comment out again
+kotlin.compiler.execution.strategy=in-process
