--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,5 +13,14 @@
             ],
             "additionalBranchPrefix": "samples/"
         }
+    ],
+    "ignoreDeps": [
+        "org.spekframework.spek2:spek-dsl-js",
+        "org.spekframework.spek2:spek-runtime-jvm",
+        "org.spekframework.spek2:spek-runner-junit5",
+        "org.spekframework.spek2:spek-dsl-jvm",
+        "org.spekframework.spek2:spek-dsl-metadata",
+        "io.mockk:mockk",
+        "io.mockk:mockk-common"
     ]
 }
